Fix hr margin on mobile

--- a/src/static/css/theme.css
+++ b/src/static/css/theme.css
@@ -47,6 +47,12 @@ hr {
   margin: 32px -24px;
 }
 
+@media screen and (max-width: 425px) {
+  hr {
+    margin: 32px -16px;
+  }
+}
+
 ul,
 ol {
   padding-left: 32px;
